Fixes one tag layout issue
- Fixes the funky layout issue where the blog posts would trample all over each other
- Remaining: figure out how to replace jquery dotdotdot

--- a/assets/_sass/_custom.scss
+++ b/assets/_sass/_custom.scss
@@ -300,6 +300,7 @@
 	@include omega();
 	max-height: 8em;
 	overflow: hidden;
+	width: 100%;
 }
 .blog-all {
 	@include span-columns(12);
